--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     .profile-avatar {
       width: 90%;
-      max-width: 280px;
+      max-width: 320px;
       height: auto;
       border: 8px solid #caa663;
       border-radius: 20px;
@@ -66,6 +66,7 @@
       border-radius: 20px;
       width: 85%;
       text-align: center;
+      margin: 0 auto;
     }
 
     .profile-card h2 {
@@ -135,6 +136,7 @@
 
     .buttons button:hover {
       opacity: 0.9;
+      transform: scale(1.05);
     }
 
     .resume-info {
