--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       background-color: #caa663;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      position: relative;
       padding-top: 40px;
+      position: relative;
     }
 
     .profile-avatar {
@@ -66,7 +66,10 @@
       border-radius: 20px;
       width: 85%;
       text-align: center;
-      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     .profile-card h2 {
@@ -136,7 +139,6 @@
 
     .buttons button:hover {
       opacity: 0.9;
-      transform: scale(1.05);
     }
 
     .resume-info {
