--- a/index.html
+++ b/index.html
@@ -12,64 +12,65 @@
       padding: 0;
     }
 
-    body {
+    html, body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #ffffff;
       color: #000;
-      height: 100vh;
+      height: 100%;
+    }
+
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
     }
 
     .container {
       display: flex;
-      width: 90%;
+      flex-direction: column;
+      width: 100%;
       max-width: 1200px;
-      height: 90vh;
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     }
 
+    .left, .right {
+      padding: 30px;
+    }
+
     .left {
-      width: 40%;
       background-color: #caa663;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      padding-top: 40px;
-      position: relative;
     }
 
     .profile-avatar {
-      width: 90%;
+      width: 100%;
       max-width: 320px;
-      height: auto;
+      height: 420px;
       border: 8px solid #caa663;
       border-radius: 20px;
       overflow: hidden;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .profile-avatar img {
       width: 100%;
-      height: auto;
-      display: block;
+      height: 100%;
       object-fit: cover;
+      object-position: top center;
     }
 
     .profile-card {
       background: #fff;
-      padding: 40px 30px;
+      padding: 30px;
       border-radius: 20px;
-      width: 85%;
+      width: 100%;
+      max-width: 360px;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
     }
 
     .profile-card h2 {
@@ -95,7 +96,6 @@
     }
 
     .right {
-      width: 60%;
       background-color: #fff;
       display: flex;
       flex-direction: column;
@@ -105,24 +105,25 @@
     }
 
     .right h1 {
-      font-size: 48px;
+      font-size: 36px;
       margin-bottom: 15px;
     }
 
     .right p {
-      font-size: 18px;
-      margin-bottom: 40px;
+      font-size: 16px;
+      margin-bottom: 30px;
       max-width: 500px;
     }
 
     .buttons {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
+      gap: 10px;
     }
 
     .buttons button {
-      padding: 12px 24px;
-      margin-right: 15px;
+      padding: 10px 20px;
       font-size: 16px;
       border: 2px solid #000;
       border-radius: 6px;
@@ -144,10 +145,35 @@
     .resume-info {
       margin-top: 30px;
       display: none;
-      font-size: 16px;
+      font-size: 14px;
       line-height: 1.6;
       color: #333;
       text-align: left;
+      max-width: 500px;
+    }
+
+    @media (min-width: 768px) {
+      .container {
+        flex-direction: row;
+        height: 90vh;
+      }
+
+      .left, .right {
+        flex: 1 1 50%;
+        padding: 60px;
+      }
+
+      .right h1 {
+        font-size: 48px;
+      }
+
+      .right p {
+        font-size: 18px;
+      }
+
+      .resume-info {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -155,7 +181,7 @@
   <div class="container">
     <div class="left">
       <div class="profile-avatar">
-        <img src="avatarr" alt="Avatar">
+        <img src="avatarr.jpg" alt="Avatar">
       </div>
       <div class="profile-card">
         <h2>Lê Quang Hoàng</h2>
