--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lê Quang Hoàng Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -13,10 +14,11 @@
     }
 
     html, body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #ffffff;
       color: #000;
       height: 100%;
+      scroll-behavior: smooth;
     }
 
     body {
@@ -50,7 +52,7 @@
     .profile-avatar {
       width: 100%;
       max-width: 320px;
-      height: 420px;
+      height: 360px;
       border: 8px solid #caa663;
       border-radius: 20px;
       overflow: hidden;
@@ -74,7 +76,9 @@
     }
 
     .profile-card h2 {
-      font-size: 22px;
+      font-size: 28px;
+      font-family: 'Roboto Slab', serif;
+      font-weight: 700;
       margin-bottom: 5px;
     }
 
@@ -91,8 +95,25 @@
     .social-icons a {
       margin: 0 10px;
       text-decoration: none;
-      color: #000;
       font-size: 20px;
+      transition: transform 0.3s ease;
+    }
+
+    .social-icons a:hover {
+      transform: scale(1.2);
+    }
+
+    .social-icons a[href*="facebook"] {
+      color: #1877f2;
+    }
+    .social-icons a[href*="instagram"] {
+      color: #e4405f;
+    }
+    .social-icons a[href*="zalo"] {
+      color: #0068ff;
+    }
+    .social-icons a[href*="mailto"] {
+      color: #dd4b39;
     }
 
     .right {
@@ -129,7 +150,7 @@
       border-radius: 6px;
       cursor: pointer;
       background: none;
-      transition: 0.3s;
+      transition: all 0.3s ease;
     }
 
     .buttons .cv-btn {
@@ -139,17 +160,26 @@
     }
 
     .buttons button:hover {
+      transform: translateY(-2px);
       opacity: 0.9;
     }
 
     .resume-info {
       margin-top: 30px;
-      display: none;
       font-size: 14px;
       line-height: 1.6;
       color: #333;
       text-align: left;
       max-width: 500px;
+      opacity: 0;
+      max-height: 0;
+      overflow: hidden;
+      transition: all 0.5s ease;
+    }
+
+    .resume-info.active {
+      opacity: 1;
+      max-height: 500px;
     }
 
     @media (min-width: 768px) {
@@ -214,8 +244,8 @@
   <script>
     function toggleResume() {
       const resume = document.getElementById('resumeInfo');
-      resume.style.display = resume.style.display === 'block' ? 'none' : 'block';
-      if (resume.style.display === 'block') {
+      resume.classList.toggle('active');
+      if (resume.classList.contains('active')) {
         resume.scrollIntoView({ behavior: 'smooth' });
       }
     }
