--- a/index.html
+++ b/index.html
@@ -13,150 +13,143 @@
       padding: 0;
     }
 
-    html, body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #ffffff;
-      color: #000;
-      height: 100%;
-      scroll-behavior: smooth;
-    }
-
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      max-width: 1200px;
-      border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-    }
-
-    .left, .right {
-      padding: 30px;
-    }
-
-    .left {
-      background-color: #caa663;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .profile-avatar {
-      width: 100%;
-      max-width: 320px;
-      height: 360px;
-      border: 8px solid #caa663;
-      border-radius: 20px;
-      overflow: hidden;
-      margin-bottom: 20px;
-    }
-
-    .profile-avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: top center;
-    }
-
-    .profile-card {
-      background: #fff;
-      padding: 30px;
-      border-radius: 20px;
-      width: 100%;
-      max-width: 360px;
-      text-align: center;
-    }
-
-    .profile-card h2 {
-      font-size: 28px;
-      font-family: 'Roboto Slab', serif;
-      font-weight: 700;
-      margin-bottom: 5px;
-    }
-
-    .profile-card p.title {
-      font-size: 14px;
-      color: #333;
-      margin-bottom: 15px;
-    }
-
-    .social-icons {
-      margin: 15px 0;
-    }
-
-    .social-icons a {
-      margin: 0 10px;
-      text-decoration: none;
-      font-size: 20px;
-      transition: transform 0.3s ease;
-    }
-
-    .social-icons a:hover {
-      transform: scale(1.2);
-    }
-
-    .social-icons a[href*="facebook"] {
-      color: #1877f2;
-    }
-    .social-icons a[href*="instagram"] {
-      color: #e4405f;
-    }
-    .social-icons a[href*="zalo"] {
-      color: #0068ff;
-    }
-    .social-icons a[href*="mailto"] {
-      color: #dd4b39;
-    }
-
-    .right {
+      font-family: 'Poppins', sans-serif;
       background-color: #fff;
+      color: #000;
+      margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    header h1 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 24px;
+    }
+
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #000;
+      font-weight: 600;
+    }
+
+    .main {
+      display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
+      padding: 60px 20px;
+      background: linear-gradient(to right, #f8f3ef 50%, #ffffff 50%);
+      width: 100%;
+      flex: 1;
     }
 
-    .right h1 {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-
-    .right p {
-      font-size: 16px;
-      margin-bottom: 30px;
-      max-width: 500px;
-    }
-
-    .buttons {
+    .main > .container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      align-items: flex-start;
+      gap: 40px;
+      max-width: 1200px;
+      width: 100%;
+    }
+
+    .card {
+      background: #f1e7dc;
+      border-radius: 20px;
+      padding: 40px;
+      width: 350px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      border: 2px solid #fff;
+    }
+
+    .card img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 20px;
+    }
+
+    .card h2 {
+      font-size: 22px;
+      font-family: 'Roboto Slab', serif;
+      margin-bottom: 5px;
+    }
+
+    .card p {
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+
+    .card .social {
+      margin-top: 10px;
+    }
+
+    .card .social a {
+      margin: 0 8px;
+      color: #000;
+      font-size: 18px;
+      transition: color 0.3s;
+    }
+
+    .card .social a[href*="facebook"] { color: #1877f2; }
+    .card .social a[href*="instagram"] { color: #e4405f; }
+    .card .social a[href*="zalo"] { color: #0068ff; }
+    .card .social a[href*="mailto"] { color: #dd4b39; }
+
+    .intro {
+      background: #fff;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border: 2px solid #fff;
+      max-width: 600px;
+    }
+
+    .intro h1 {
+      font-size: 52px;
+      font-family: 'Roboto Slab', serif;
+      margin-bottom: 20px;
+    }
+
+    .intro p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    #resumeInfo {
+      font-size: 16px;
+      line-height: 1.8;
     }
 
     .buttons button {
       padding: 10px 20px;
-      font-size: 16px;
+      margin: 5px;
+      font-size: 14px;
+      border-radius: 5px;
       border: 2px solid #000;
-      border-radius: 6px;
-      cursor: pointer;
       background: none;
-      transition: all 0.3s ease;
+      cursor: pointer;
+      transition: all 0.3s;
     }
 
-    .buttons .cv-btn {
+    .buttons button.cv-btn {
       background-color: #caa663;
-      border: none;
       color: #fff;
+      border: none;
     }
 
     .buttons button:hover {
@@ -164,91 +157,87 @@
       opacity: 0.9;
     }
 
-    .resume-info {
-      margin-top: 30px;
+    footer {
+      width: 100%;
+      background-color: #f8f3ef;
+      padding: 30px 60px;
       font-size: 14px;
-      line-height: 1.6;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
+      border-top: 2px solid #e5d5c5;
+    }
+
+    footer .contact span {
+      display: block;
+      margin-bottom: 5px;
       color: #333;
-      text-align: left;
-      max-width: 500px;
-      opacity: 0;
-      max-height: 0;
-      overflow: hidden;
-      transition: all 0.5s ease;
     }
 
-    .resume-info.active {
-      opacity: 1;
-      max-height: 500px;
+    footer .social a {
+      margin-left: 15px;
+      font-size: 16px;
+      color: #000;
+      transition: color 0.3s;
     }
 
-    @media (min-width: 768px) {
-      .container {
-        flex-direction: row;
-        height: 90vh;
-      }
-
-      .left, .right {
-        flex: 1 1 50%;
-        padding: 60px;
-      }
-
-      .right h1 {
-        font-size: 48px;
-      }
-
-      .right p {
-        font-size: 18px;
-      }
-
-      .resume-info {
-        font-size: 16px;
-      }
+    footer .social a:hover {
+      color: #caa663;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="left">
-      <div class="profile-avatar">
-        <img src="avatarr.jpg" alt="Avatar">
-      </div>
-      <div class="profile-card">
+  <header>
+    <h1>Lê Quang Hoàng / Software Engineer</h1>
+    <nav>
+      <a href="#about">ABOUT ME</a>
+      <a href="#projects">PROJECTS</a>
+      <a href="#contact">CONTACT</a>
+      <a href="https://drive.google.com/file/d/1m_j9F_Bw40mEXFWt95VnS1XATJnzeWr7/view" class="cv-btn" target="_blank">CV</a>
+    </nav>
+  </header>
+
+  <div class="main">
+    <div class="container">
+      <div class="card">
+        <img src="avatarr.jpg" alt="Hoang">
         <h2>Lê Quang Hoàng</h2>
-        <p class="title">Software Engineering</p>
-        <div class="social-icons">
+        <p>Software Engineering</p>
+        <div class="social">
           <a href="https://www.facebook.com/lqhoang1001/" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/_lqhoang_/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://zalo.me/0703026269" target="_blank"><i class="fas fa-comment-dots"></i></a>
           <a href="mailto:lequanghoang1001@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
-    </div>
-    <div class="right">
-      <h1>Hello</h1>
-      <p>I'm a Capricorn — ambitious, disciplined, and goal-oriented. I believe in hard work, long-term planning, and staying grounded while chasing dreams.</p>
-      <div class="buttons">
-        <button onclick="toggleResume()">Resume</button>
-        <button class="cv-btn" onclick="window.open('https://drive.google.com/file/d/1m_j9F_Bw40mEXFWt95VnS1XATJnzeWr7/view', '_blank')">CV</button>
-      </div>
-      <div class="resume-info" id="resumeInfo">
-        <strong>Full Name:</strong> Le Quang Hoang<br>
-        <strong>Email:</strong> lequanghoang1001@gmail.com<br>
-        <strong>Phone:</strong> 0703026269<br>
-        <strong>University:</strong> Hoa Sen University - Software Engineering<br>
-        <strong>Hobbies:</strong> Cheerleading, Fashion, Web Programming, Café hopping with friends
+
+      <div class="intro" id="contact">
+        <h1>Hello</h1>
+        <p>I'm a Capricorn — ambitious, disciplined, and goal-oriented. I believe in hard work, long-term planning, and staying grounded while chasing dreams.</p>
+        <div id="resumeInfo">
+          <strong>Full Name:</strong> Le Quang Hoang<br>
+          <strong>Birthday:</strong> 10/01/2001<br>
+          <strong>University:</strong> Hoa Sen University - Software Engineering<br>
+          <strong>Hobbies:</strong> Cheerleading, Fashion, Web Programming, Café hopping with friends
+        </div>
       </div>
     </div>
   </div>
 
-  <script>
-    function toggleResume() {
-      const resume = document.getElementById('resumeInfo');
-      resume.classList.toggle('active');
-      if (resume.classList.contains('active')) {
-        resume.scrollIntoView({ behavior: 'smooth' });
-      }
-    }
-  </script>
+  <footer>
+    <div>© 2025 by Lê Quang Hoàng.</div>
+    <div class="contact">
+      <span>Call: 0703026269</span>
+      <span>Write: lequanghoang1001@gmail.com</span>
+    </div>
+    <div class="social">
+      <a href="https://www.facebook.com/lqhoang1001/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.instagram.com/_lqhoang_/" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+  </footer>
 </body>
 </html>
